--- a/public/manifest.json
+++ b/public/manifest.json
@@ -19,7 +19,7 @@
       "purpose": "maskable"
     }
   ],
-  "start_url": "/index.html",
+  "start_url": "/",
   "display": "standalone",
   "theme_color": "#008080",
   "background_color": "#ffffff"
